locks_analysis_log/2024-06-25-01-02-31/trace_locks.30.251395.251446.abortEx.actions.log
/virtual/main.c:52:21: error: unexpected type name 'u64': expected expression
    u64 func_addr = u64 mutex_addr = PT_REGS_PARM1(ctx); 
                    ^
1 error generated.
Failed to compile BPF program: Failed to compile BPF module <text>
